# rusteroids

./: Cargo.toml  README.md
design/: player_ship.aseprite  spritesheet.aseprite
resources/: bindings.ron  display_config.ron
resources/sprites/: spritesheet.ron
src/: end_state.rs  main.rs  state.rs  title_state.rs
src/component/: asteroid.rs  collidable.rs  laser.rs  mod.rs  player.rs  small_asteroid.rs  velocity.rs
src/entity/: asteroid.rs  laser.rs  mod.rs  player_ship.rs
src/resource/: sprite.rs
src/system/: collisions.rs  control_player.rs  debug_boxes.rs  lasers_damage_asteroids.rs  lasers_damage_small_asteroids.rs  lasers_expire.rs  mod.rs  move_objects.rs  move_player.rs  ship_collides_with_asteroid.rs  ship_respawns.rs
