[package]
name = "rusteroids"
version = "0.1.0"
authors = ["Blaine Price <1wbprice@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8", features = ["serde"] }
rand = "0.7.2"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]